# osm-auth

./: .env.tmpl  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: local_certs.md  osm_oauth_reference.md
src/: __init__.py  data_store.py
src/auth/: __init__.py  callback_server.py  token_store.py
src/auth/osm/: README.md  __init__.py  client.py  config.py
test/auth/: test_callback_server.py  test_osm_client.py  test_token_store.py
